--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 certifi==2017.11.5
 chardet==3.0.4
+click==6.7
+Flask==0.12.2
+Flask-Login==0.4.0
+Flask-OAuthlib==0.9.4
+Flask-WTF==0.14.2
 idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+oauthlib==2.0.6
 py==1.5.2
 pytest==3.2.5
 requests==2.18.4
+requests-oauthlib==0.8.0
 urllib3==1.22
 vk==2.0.2
+Werkzeug==0.12.2
+WTForms==2.1
